force-app/main/default/objects/Purchase_Order_Item__c/fields/Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Line</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipName>Purchase_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>