force-app/main/default/objects/Purchase_Order_Item__c/fields/Division_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Division_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>