force-app/main/default/objects/Purchase_Order_Item__c/fields/Liability_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Liability_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liability GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipName>Purchase_Order_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>