force-app/main/default/objects/Purchase_Order_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This is the Quantity ordered from the Vendor.</inlineHelpText>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>