force-app/main/default/objects/Purchase_Order_Item__c/fields/Quantity_Received__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Received</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>