force-app/main/default/objects/Purchase_Order_Item__c/fields/Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Remaining__c</fullName>
    <formula>Quantity__c -  Quantity_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>