force-app/main/default/objects/Purchase_Order_Item__c/fields/Received_Percent__c.field-meta.xml
<CustomField>
    <fullName>Received_Percent__c</fullName>
    <formula>Quantity_Received__c/ Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>