force-app/main/default/objects/Purchase_Order_Item__c/fields/Remaining_Percent__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Percent__c</fullName>
    <formula>Quantity_Remaining__c /  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>